RESOLVED FIXED285063
TextUtil::lastBaseCharacterFromText(StringView string) is not processing first string character
https://bugs.webkit.org/show_bug.cgi?id=285063
Summary TextUtil::lastBaseCharacterFromText(StringView string) is not processing firs...
Vitor Roriz
Reported 2024-12-20 22:19:48 PST
TextUtil::lastBaseCharacterFromText(StringView string) is not processing first string character
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-20 22:19:56 PST
Vitor Roriz
Comment 2 2024-12-20 22:24:32 PST
EWS
Comment 3 2024-12-20 23:35:22 PST
Committed 288215@main (09ca90016cce): <https://commits.webkit.org/288215@main> Reviewed commits have been landed. Closing PR #38309 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.