TextUtil::lastBaseCharacterFromText is not processing first string character after 288203@main https://bugs.webkit.org/show_bug.cgi?id=285063 rdar://problem/141861289

Reviewed by Alex Christensen.

After 288203@main TextUtil::lastBaseCharacterFromText won't process the character of
index = 0. This should fix it.

* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::lastBaseCharacterFromText):

Canonical link: https://commits.webkit.org/288215@main