Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp
@@ -698,8 +698,8 @@ char32_t TextUtil::lastBaseCharacterFromText(StringView string)
     if (!string.length())
         return 0;
 
-    for (size_t characterIndex = string.length() - 1; characterIndex--;) {
-        auto character = string.characterAt(characterIndex);
+    for (size_t characterIndex = string.length(); characterIndex > 0; --characterIndex) {
+        auto character = string.characterAt(characterIndex - 1);
         if (!isCombiningMark(character))
             return character;
     }
